# godot-cpp-cmake

./: .gitignore  .gitmodules  CMakeLists.txt  _releaseBuild.bat  buildDebug.bat  init.cpp
project/: Main.gd  Main.tscn  project.godot  test.gdns
project/.import/: !!! In (24x8).png-b664d33efca6357d03425406716de673.md5  !!! In (24x8).png-b664d33efca6357d03425406716de673.stex  !!! Out (24x8).png-12e5a01ba6bff6be7681ff9a9dcbdfc0.md5  !!! Out (24x8).png-12e5a01ba6bff6be7681ff9a9dcbdfc0.stex  Attack (34x28).png-40cb26702b8ea0b4f893edaca0cd9d41.md5  Attack (34x28).png-40cb26702b8ea0b4f893edaca0cd9d41.stex  Attack (38x28).png-9fb65d8ab06bdef13c67947a77b90a99.md5  Attack (38x28).png-9fb65d8ab06bdef13c67947a77b90a99.stex  Attack (78x58).png-8db4c96665db5dc36a5a3b206f2fd65c.md5  Attack (78x58).png-8db4c96665db5dc36a5a3b206f2fd65c.stex  Attack In (24x8).png-0e59cb2711debba1d6e2e96aaf5e4025.md5  Attack In (24x8).png-0e59cb2711debba1d6e2e96aaf5e4025.stex  Attack Out (24x8).png-8b9327a832e89ed5527571f170decabe.md5  Attack Out (24x8).png-8b9327a832e89ed5527571f170decabe.stex  Big Diamond Hit (18x14).png-102a7097defddf6299bf9e8a7354832b.md5  Big Diamond Hit (18x14).png-102a7097defddf6299bf9e8a7354832b.stex  Big Diamond Idle (18x14).png-4ad9b54e7a3f60398fa96b14e25e167d.md5  Big Diamond Idle (18x14).png-4ad9b54e7a3f60398fa96b14e25e167d.stex  Big Heart Hit (18x14).png-5bcc9ed8ad5ff3c89a1256fe61503ea5.md5  Big Heart Hit (18x14).png-5bcc9ed8ad5ff3c89a1256fe61503ea5.stex  Big Heart Idle (18x14).png-d3f8a130fbf0d22269373be3835eb32f.md5  Big Heart Idle (18x14).png-d3f8a130fbf0d22269373be3835eb32f.stex  Bomb Off.png-2184ef9e164bcd2f8511f48d2907517f.md5  Bomb Off.png-2184ef9e164bcd2f8511f48d2907517f.stex  Bomb On (52x56).png-f6446050a8ad8bfa1317a65634c91e4b.md5  Bomb On (52x56).png-f6446050a8ad8bfa1317a65634c91e4b.stex  Boom In (24x8).png-6006ae6dfcdbef607a45e5d74c72c115.md5  Boom In (24x8).png-6006ae6dfcdbef607a45e5d74c72c115.stex  Boom Out (24x8).png-3a65aff3a5b0a7575b38ffea0ade1633.md5  Boom Out (24x8).png-3a65aff3a5b0a7575b38ffea0ade1633.stex  Boooooom (52x56).png-44e502439f2d3f09ce7e4062e0539759.md5  Boooooom (52x56).png-44e502439f2d3f09ce7e4062e0539759.stex  Cannon Ball.png-2c46eefac52336584861dbb38afccc4e.md5  Cannon Ball.png-2c46eefac52336584861dbb38afccc4e.stex  Closiong (46x56).png-51363029a369c559a6c0499a02efade0.md5  Closiong (46x56).png-51363029a369c559a6c0499a02efade0.stex  Dead (34x28).png-a9b1e1f8364c3ef487b21f5e5ce667e4.md5  Dead (34x28).png-a9b1e1f8364c3ef487b21f5e5ce667e4.stex  Dead (38x28).png-b620976f2166c20f71595add9ccb82b1.md5  Dead (38x28).png-b620976f2166c20f71595add9ccb82b1.stex  (+124 more)
project/assets/: Kings and Pigs.png.import
project/scenes/: Game.tscn
src/: gdexample.cpp  gdexample.h
src/player/: player.cpp  player.h
(+91 files in other folders)
